--- a/adwiti.html
+++ b/adwiti.html
@@ -106,7 +106,7 @@
         
         <section id="adwiti-story">
             <h2 class="text-3xl font-extrabold glowing-text text-cyan-400 mb-6">
-                ARTICLE 1:THE POWER TO STOP BULLYING: LESSONS FROM ADWITI’S STORY
+                ARTICLE 1:THE POWER TO STOP BULLYING: LESSONS FROM ADWITI’S STORY*
             </h2>
             
             <p class="muted mb-6 text-xl" style="color:var(--muted); font-style: italic; border-left: 3px solid var(--accent2); padding-left: 15px;">The definitive guide to how a victim took back her power—and how you can too.</p>
@@ -130,7 +130,8 @@
                 </div>
                 <div class="tactic-card tactic-4">
                     <h4 class="tactic-title">4. The Smart Question (Turning the Tables) 🗣️</h4>
-                    <p class="text-gray-300">Adwiti delivered the final blow by questioning the bully's motivation. This simple, direct question forced Deeksha to  explain her toxic behavior  to an audience that was now judging *her*.</p>
+                    <p class="text-gray-300">Adwiti delivered the final blow by questioning the bully's motivation. This simple, direct question forced Deeksha to muuter a weak excuse and stop her bullying.</p>
+                    <p class="text-gray-300">*The story is fictional and none of this happened in real life</p>
                 </div>
             </div>
 
@@ -223,3 +224,4 @@
     </div>
 </body>
 </html>
+
