--- a/adwiti.html
+++ b/adwiti.html
@@ -130,7 +130,7 @@
                 </div>
                 <div class="tactic-card tactic-4">
                     <h4 class="tactic-title">4. The Smart Question (Turning the Tables) 🗣️</h4>
-                    <p class="text-gray-300">Adwiti delivered the final blow by questioning the bully's motivation. This simple, direct question forced Deeksha to muuter a weak excuse and stop her bullying.</p>
+                    <p class="text-gray-300">The simple, direct question compelled Deeksha to mutter a feeble excuse and cease her bullying.</p>
                     <p class="text-gray-300">*The story is fictional and none of this happened in real life</p>
                 </div>
             </div>
@@ -224,4 +224,5 @@
     </div>
 </body>
 </html>
+
 
