--- a/index.html
+++ b/index.html
@@ -654,12 +654,12 @@
         <h2>SUPPORTER TESTIMONIALS</h2>
         <div class="reviews-container" style="display:grid; grid-template-columns:repeat(auto-fit, minmax(280px, 1fr)); gap:20px; margin-top:20px;">
             <div class="review-card reveal panel" style="border-color: var(--accent1);">
-                <h4 class="font-bold text-xl" style="color:var(--accent1); font-family:var(--font-heading);">Nived N</h4>
+                <h4 class="font-bold text-xl" style="color:var(--accent1); font-family:var(--font-heading);">Deeksha</h4>
                 <p style="color:var(--text-color); font-family:var(--font-body);">“7E Hub gave me the courage to talk about what was happening. I felt truly heard and supported through the tools.”</p>
                 <div style="color:var(--muted); font-size:0.9rem; font-family:var(--font-body);">— SAFE SPACE USER</div>
             </div>
             <div class="review-card reveal panel" style="border-color: var(--accent1);">
-                <h4 class="font-bold text-xl" style="color:var(--accent1); font-family:var(--font-heading);">Vedant S.</h4>
+                <h4 class="font-bold text-xl" style="color:var(--accent1); font-family:var(--font-heading);">Vivaan D.</h4>
                 <p style="color:var(--text-color); font-family:var(--font-body);">“The Empathy Guide helped me understand how to be a better friend to someone struggling. It changed my approach entirely.”</p>
                 <div style="color:var(--muted); font-size:0.9rem; font-family:var(--font-body);">— EMPOWERMENT SUPPORTER</div>
             </div>
@@ -775,7 +775,7 @@
                         
                         <p class="muted mb-8 text-xl" style="color:var(--muted); font-style: italic; border-left: 3px solid var(--accent2); padding-left: 15px;">The definitive guide to how a victim took back her power—and how you can too.</p>
 
-                        <p class="text-gray-300 mb-6">Adwiti was pushed to a breaking point by Deeksha's constant bullying, which impacted her academic performance and confidence. But when she finally decided to stop being &quot;Deeksha's puppet,&quot; she successfully defeated her aggressor using a combination of powerful psychological tactics.</p>
+                        <p class="text-gray-300 mb-6">Adwiti was pushed to a breaking point by the bully's constant bullying, which impacted her academic performance and confidence. But when she finally decided to stop being &quot;the bully's puppet,&quot; she successfully defeated her aggressor using a combination of powerful psychological tactics.</p>
 
                         <h4 style="font-family:var(--font-heading);" class="text-2xl font-bold mt-8 mb-3 text-cyan-400 glowing-text">The 4 Key Tactics Adwiti Used (Interactive)</h4>
                         
@@ -786,15 +786,15 @@
                             </div>
                             <div class="tactic-card tactic-2 reveal" style="transition-delay: 0.1s;">
                                 <h5 class="tactic-title">2. The Ally Effect (Support) 🤝</h5>
-                                <p class="tactic-body">Crucially, the bystanders refused to support Deeksha. Bullying cannot survive without an audience.  Their visible support isolated the bully. </p>
+                                <p class="tactic-body">Crucially, the bystanders refused to support the bully. Bullying cannot survive without an audience.  Their visible support isolated the bully. </p>
                             </div>
                             <div class="tactic-card tactic-3 reveal" style="transition-delay: 0.2s;">
                                 <h5 class="tactic-title">3. Calmness &amp; Composure 🧘</h5>
-                                <p class="tactic-body">Adwiti stayed calm, refusing to give the emotional outburst Deeksha was seeking. This made the bully's actions look  desperate and weak. </p>
+                                <p class="tactic-body">Adwiti stayed calm, refusing to give the emotional outburst the bully was seeking. This made the bully's actions look  desperate and weak. </p>
                             </div>
                             <div class="tactic-card tactic-4 reveal" style="transition-delay: 0.3s;">
                                 <h5 class="tactic-title">4. The Smart Question (Turning the Tables) 🗣️</h5>
-                                <p class="tactic-body">Adwiti delivered the final blow by questioning the bully's motivation. This simple question forced Deeksha to  explain her toxic behavior. </p>
+                                <p class="tactic-body">Adwiti delivered the final blow by questioning the bully's motivation. This simple question forced the bully to  explain her toxic behavior. </p>
                             </div>
                         </div>
 
