--- a/adwiti.html
+++ b/adwiti.html
@@ -104,7 +104,7 @@
 
         <hr class="section-separator">
         
-        <section id="The Victim-story">
+        <section id="adwiti-story">
             <h2 class="text-3xl font-extrabold glowing-text text-cyan-400 mb-6">
                 ARTICLE 1:THE POWER TO STOP BULLYING: LESSONS FROM The Victim’S STORY*
             </h2>
@@ -224,6 +224,7 @@
     </div>
 </body>
 </html>
+
 
 
 
