--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
             
             <div class="game-panel reveal" onclick="window.location.href='adwiti.html#adwiti-story'">
                 <div class="game-panel-content">
-                    <h3 class="text-2xl" style="color:var(--accent1); font-family:var(--font-heading);">THE POWER TO STOP BULLYING: LESSONS FROM ADWITI’S STORY</h3>
+                    <h3 class="text-2xl" style="color:var(--accent1); font-family:var(--font-heading);">THE POWER TO STOP BULLYING: LESSONS FROM THE VICTIM’S STORY</h3>
                     <p class="muted" style="color:var(--muted); font-family:var(--font-body);">An in-depth article analyzing the skit and TEDx talk, focusing on confidence, smart responses, and the power of bystanders.</p>
                     <div style="margin-top:16px">
                         <button class="btn" style="padding:10px 20px; font-family:var(--font-body);">READ FULL ARTICLE</button>
