--- a/index.html
+++ b/index.html
@@ -711,7 +711,7 @@
     <footer style="padding: 30px 8%; background-color: var(--bg-color); border-top: 1px solid var(--accent2);">
         <div style="max-width: var(--max-width); margin: 0 auto; display: flex; justify-content: space-between; align-items: center; color: var(--muted); font-size: 0.9rem; font-family: var(--font-body);">
             <div style="text-align:left;">
-                &copy; 2024 7E Hub. All Rights Reserved.
+                &copy; 2024 7E Hub. All Rights Reserved. Developed by Vedant Sapra of 7E
             </div>
             <div style="text-align:right; display:flex; gap:15px;">
                 <a href="#" style="color: var(--muted); text-decoration: none;">Privacy Policy</a> | 
